FoodBank/objects/TimeSlot__c.object
<CustomObject>
    <fields>
        <fullName>Allocated__c</fullName>
        <description>The number of slots already allocated (scheduled) for various services.</description>
        <inlineHelpText>This field is automatically calculated.</inlineHelpText>
        <label>Allocated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <description>The date &amp; time of this time slot. If this slot is for the entire day then make the time midnight.</description>
        <label>Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FamilySize__c</fullName>
        <label>Family Size</label>
        <picklist>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Free__c</fullName>
        <formula>NumSlots__c - Allocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumSlots__c</fullName>
        <defaultValue>20</defaultValue>
        <description>The number of allocated slots in this time period. This is not the number of used or available slots, and does not change when services are scheduled in this time slot.</description>
        <label>Number of Slots</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <picklist>
            <picklistValues>
                <fullName>Thanksgiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pickup</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoptions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>TimeSlot</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimeSlots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>